--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <script src="global/script/fcaef/fcaef.js"></script>
     <script src="global/script/fcaef/events.js"></script>
     <script src="global/script/fcaef/base.js"></script>
+    <script src="global/script/fcaef/templates.js"></script>
+    <script src="global/script/fcaef/templateSingleLine.js"></script>
+    <script src="global/script/fcaef/renderer.js"></script>
     <script src="global/script/fcaef/navigation.js"></script>
     <!-- ##source ends## -->
 
