--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <script src="global/script/fcaef/templates.js"></script>
     <script src="global/script/fcaef/templateSingleLine.js"></script>
     <script src="global/script/fcaef/templateSingleImage.js"></script>
+    <script src="global/script/fcaef/templateTable.js"></script>
     <script src="global/script/fcaef/renderer.js"></script>
     <script src="global/script/fcaef/navigation.js"></script>
+    <script src="global/script/fcaef/audio.js"></script>
     <!-- ##source ends## -->
 
 </head>
