2 screen integrated Bullet templates added Audio sync included event off issues fixed

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <script src="global/script/fcaef/templateSingleLine.js"></script>
     <script src="global/script/fcaef/templateSingleImage.js"></script>
     <script src="global/script/fcaef/templateTable.js"></script>
+    <script src="global/script/fcaef/templateBullet.js"></script>
     <script src="global/script/fcaef/renderer.js"></script>
     <script src="global/script/fcaef/navigation.js"></script>
     <script src="global/script/fcaef/audio.js"></script>
+    <script src="global/script/fcaef/audiosync.js"></script>
     <!-- ##source ends## -->
 
 </head>
